# Warp_clone

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT_STATUS.md  InstallationLog.txt  LICENSE  README.md
src/: main.rs  main_simple.rs
src/ai/: agent.rs  chat.rs  gemini.rs  mod.rs
src/autocomplete/: mod.rs
src/file_explorer/: mod.rs
src/security/: bandit.rs  mod.rs  osv.rs  scanner.rs  semgrep.rs
src/terminal/: block.rs  engine.rs  history.rs  mod.rs  pty.rs
src/ui/: mod.rs
