[package]
name = "antraft"
version = "0.1.0"
edition = "2021"
authors = ["ANTRAFT Development Team"]
description = "Next-gen AI-powered terminal application inspired by Warp"
license = "MIT"
repository = "https://github.com/antraft/antraft"

[dependencies]
# UI Framework
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "persistence"] }
wgpu = "0.19"

# Async Runtime & Terminal
tokio = { version = "1.0", features = ["full"] }
tokio-process = "0.2"
portable-pty = "0.8"
vte = "0.13"
crossterm = "0.27"

# AI & HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# File System & Parsing
walkdir = "2.4"
notify = "6.1"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"

# Logging & Error Handling
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Configuration & Utilities
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
fuzzy-matcher = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
colors-transform = "0.2"
dotenv = "0.15"

# Security Tools Integration
which = "6.0"
tempfile = "3.8"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"